// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-iqHYGH bbQbwz cQzyJf"
        >
          <div
            className="sc-jrAGrp eEIpTi isSelected"
          >
            <a
              className="sc-kEjbxe kbombs"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gsTCUz iGdQvZ isNone"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  7
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource4"
              onClick={[Function]}
              title="resource4"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource4
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource9"
              onClick={[Function]}
              title="resource9"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource9
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource19"
              onClick={[Function]}
              title="resource19"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource19
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource29"
              onClick={[Function]}
              title="resource29"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource29
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource39"
              onClick={[Function]}
              title="resource39"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource39
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource49"
              onClick={[Function]}
              title="resource49"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource49
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/resource54"
              onClick={[Function]}
              title="resource54"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  resource54
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-iqHYGH bbQbwz cQzyJf"
        >
          <div
            className="sc-jrAGrp eEIpTi isSelected"
          >
            <a
              className="sc-kEjbxe kbombs"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gsTCUz iGdQvZ isNone"
              >
                <span>
                   
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-iqHYGH bbQbwz cQzyJf"
        >
          <div
            className="sc-jrAGrp eEIpTi isSelected"
          >
            <a
              className="sc-kEjbxe kbombs"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gsTCUz iGdQvZ isNone"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  2
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/vigoda"
              onClick={[Function]}
              title="vigoda"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  vigoda
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/snack"
              onClick={[Function]}
              title="snack"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  snack
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <span
                  className="sc-kstrdz bHChfR"
                >
                  -10.0s
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-fubCfw bCQhlU Sidebar-resources"
>
  <div
    className="sc-pFZIQ"
  >
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-iqHYGH bbQbwz cQzyJf"
        >
          <div
            className="sc-jrAGrp eEIpTi isSelected"
          >
            <a
              className="sc-kEjbxe kbombs"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gsTCUz iGdQvZ isNone"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  2
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV gWHarz"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/vigoda"
              onClick={[Function]}
              title="vigoda"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  vigoda
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX isEmpty"
                >
                  —
                </span>
                <span
                  className="sc-kstrdz bHChfR isEmpty"
                >
                  —
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdfBwQ bbQbwz  isBuilding"
        >
          <button
            className="sc-jSgupP hoVBLD"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt eAgqne"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrAGrp eEIpTi  isBuilding"
          >
            <a
              className="sc-kEjbxe kbombs SidebarItem-link"
              href="/r/snack"
              onClick={[Function]}
              title="snack"
            >
              <div
                className="sc-gsTCUz iGdQvZ isBuilding"
              >
                <span
                  className="sc-dlfnbm jAGXAl"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crrsfI bJBIQE"
              >
                <span
                  className="sc-dQppl iyJVaI"
                >
                  snack
                </span>
              </p>
              <div
                className="sc-bqyKva jGaTAI"
              >
                <span
                  className="sc-hBEYos fDweZX isEmpty"
                >
                  —
                </span>
                <span
                  className="sc-kstrdz bHChfR isEmpty"
                >
                  —
                </span>
              </div>
            </a>
            <button
              className="sc-iBPRYJ brdESs SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
